--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "testing sentinel redis support in socket.io",
   "dependencies": {
     "express": "^4.12.3",
-    "socket.io": "^1.3.5"
+    "hiredis": "^0.3.0",
+    "redis": "^0.12.1",
+    "redis-sentinel": "^0.3.2",
+    "socket.io": "^1.3.5",
+    "socket.io-redis": "^0.1.4"
   }
 }
